Fix folder spacing on mobile
Thought I already fixed this tbh

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 main {
     clear: both;
     width: 95%;
+    left: 2.5%;
     min-height: 600px;
     background-color: rgb(251, 183, 239);
     border-radius: 20px;
